--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -32,7 +32,7 @@ a {
 
 /* Layout */
 .s-layout {
-   display: flex;
+/*    display: flex; */
    width: 100%;
    min-height: 100vh;
 }
@@ -64,6 +64,7 @@ a {
 .s-sidebar__nav {
    position: fixed;
    top: 0;
+   z-index: 1;
    left: -15em;
    overflow: hidden;
    transition: all .3s ease-in;
@@ -172,7 +173,7 @@ a {
 
 </style>
 
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+
 </h:head>
 
 <h:body>
@@ -202,5 +203,9 @@ a {
 	    </ui:insert>
 		</main>
 	</div>
+	<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+    </p:confirmDialog>
 </h:body>
 </html>
