--- a/src/main/webapp/pessoa.xhtml
+++ b/src/main/webapp/pessoa.xhtml
@@ -3,7 +3,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
   <ui:composition template="/template.xhtml">
-		<ui:define name="conteudo">
+		<ui:define name="content">
 	    	<h:form>
 				<div class="ui-fluid">
 					<div class="ui-g">
@@ -22,7 +22,8 @@
 							<p:outputLabel for="cpf" value="Nome" />
 							<p:inputText id="cpf" value="#{pessoaController.pessoa.title}"/>
 						</div>
-					</div>	
+					</div>
+						
 					<div class="ui-g">	
 						<div class="ui-sm-12 ui-md-6">
 							<p:commandButton value="Salvar" 
