--- a/src/main/webapp/pessoas.xhtml
+++ b/src/main/webapp/pessoas.xhtml
@@ -32,8 +32,14 @@
 				                 reflow="true"
 				                 id="carTable" 
 				                 lazy="true"
-                         
+                                 widgetVar="gridVar" 
 				                 selection="#{pessoaController.selectedPessoa}">
+				        <f:facet name="header">
+				            <p:outputPanel>
+				                <h:outputText value="Buscar:" />
+				                <p:inputText id="globalFilter" onkeyup="PF('gridVar').filter()" style="width:150px" placeholder="Buscar por.."/>
+				            </p:outputPanel>
+				        </f:facet>         
 				  		<f:facet name="paginatorTopLeft">
 				            <p:commandButton icon="fa fa-plus" style="width: 30px" action="/pessoa.xhtml?faces-redirect=true" />
 				        </f:facet>
