--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -27,6 +27,7 @@
             <h:outputScript name="core.js" library="primefaces" />
             <h:outputScript name="main/js/perfect-scrollbar.js" />
             <h:outputScript name="main/js/showcase.js" />
+            <h:outputScript name="main/js/utils.js" />
             <ui:insert name="head" />
 
         </h:head>
