--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,35 +4,24 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:jsf="http://xmlns.jcp.org/jsf">
+<h:head>
+   <h:outputStylesheet name="main/css/login.css" />
+</h:head>
 
-	
+<h:body>
+<div class="login-page">
+  <div class="form">
+    <form class="login-form" jsf:id="form">
+      <input type="text" jsf:value="#{loginController.usuario.email}" placeholder="username"/>
+      <input type="password" jsf:value="#{loginController.usuario.password}" placeholder="password"/>
+      <button jsf:action="#{loginController.efetuaLogin()}">login</button>
+      
+    </form>
+  </div>
+</div>
+</h:body>
 
-	
-		<p:outputPanel>Login</p:outputPanel>
-	
 
-		
-		
-			<p:messages globalOnly="true" />
-		
-			<h:form id="login">
-				<p:fieldset legend="Login">
-					<h:panelGrid columns="3">
-
-						<p:outputLabel value="Email:" for="email" />
-						<p:inputText id="email" value="#{loginController.usuario.email}" >
-							<f:passThroughAttribute name="type" value="email" />
-						</p:inputText>
-						<p:message for="email" id="messageEmail" />
-						
-						<p:outputLabel value="Senha:" for="senha" />
-						<p:password id="senha" value="#{loginController.usuario.password}" feedback="true"   />
-						<p:message for="senha" id="messageSenha" />
-
-						<p:commandButton value="Efetue Login" action="#{loginController.efetuaLogin}" update="@form" process="@form" />
-					</h:panelGrid>
-				</p:fieldset>
-			</h:form>
-		
 </html>
