--- a/src/main/webapp/pessoa.xhtml
+++ b/src/main/webapp/pessoa.xhtml
@@ -25,12 +25,12 @@
 					</div>
 						
 					<div class="ui-g">	
-						<div class="ui-sm-6 ui-md-6">
+						<div class="ui-g-4 ui-sm-6">
 							<p:commandButton value="Salvar" 
 							                 action="#{pessoaController.salvar()}"
 							                 update="@form"/>
 						</div>
-						<div class="ui-sm-6 ui-md-6">
+						<div class="ui-g-4 ui-sm-6">
 							<p:button value="Cancelar"
 							          outcome="/pessoas.xhtml?faces-redirect=true"
 							          />
