Inicio cad admi

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -21,7 +21,7 @@
            <div class="ui-g ui-fluid">
                <div class="ui-g-12">
                		<input type="text" 
-               		       jsf:value="#{loginController.usuario.email}" 
+               		       jsf:value="#{loginController.usuario.login}" 
                		       placeholder="Usuário" 
                		       class="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all" />
                </div>
@@ -44,20 +44,6 @@
    </div>
 
 
-
-
-
-
-<!-- <div class="login-page"> -->
-<!--   <div class="form"> -->
-<!--     <form class="login-form" jsf:id="form"> -->
-<!--       <input type="text" jsf:value="#{loginController.usuario.email}" placeholder="username"/> -->
-<!--       <input type="password" jsf:value="#{loginController.usuario.password}" placeholder="password"/> -->
-<!--       <button jsf:action="#{loginController.efetuaLogin()}">login</button> -->
-      
-<!--     </form> -->
-<!--   </div> -->
-<!-- </div> -->
 </h:body>
 
 
