--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -47,7 +47,7 @@
 
                         <span id="SubMenu-Data" class="MenuSideMainLink bordersOfMenuSide" onclick="Showcase.openSubMenu(this);"><h:graphicImage name="main/images/mono/data.svg" /><h:graphicImage styleClass="hiddenIcons" name="main/images/mono/dataBlue.svg" /><span class="MainLinkText">Cadastros</span></span>
                         <div class="SubMenuLinkContainer">
-                            <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Empresas</a>
+                            <a class="SubMenuLink" href="#{request.contextPath}/administradores">&bull; Administradores</a>
                             <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Funcionários</a>
                             <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Credenciados</a>
                         </div>
