add funcionario, corrige endereco

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -50,14 +50,14 @@
                             <a class="SubMenuLink" href="#{request.contextPath}/administradores">&bull; Administradores</a>
                             <a class="SubMenuLink" href="#{request.contextPath}/credenciados">&bull; Credenciados</a>
                             <a class="SubMenuLink" href="#{request.contextPath}/empresas.xhtml">&bull; Empresas</a>
-                            <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Funcionários</a>
+                            <a class="SubMenuLink" href="#{request.contextPath}/funcionarios.xhtml">&bull; Funcionários</a>
                         </div>
 
                         <span id="SubMenu-Data" class="MenuSideMainLink bordersOfMenuSide" onclick="Showcase.openSubMenu(this);"><h:graphicImage name="main/images/mono/overlay.svg" /><h:graphicImage styleClass="hiddenIcons" name="main/images/mono/overlayBlue.svg" /><span class="MainLinkText">Relatórios</span></span>
                         <div class="SubMenuLinkContainer">
-                            <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Empresas</a>
-                            <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Funcionários</a>
-                            <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Credenciados</a>
+<!--                             <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Empresas</a> -->
+<!--                             <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Funcionários</a> -->
+<!--                             <a class="SubMenuLink" href="#{request.contextPath}/pessoas.xhtml">&bull; Credenciados</a> -->
                         </div>
 
                         <span id="SubMenu-Message" class="MenuSideMainLink bordersOfMenuSide" onclick="Showcase.openSubMenu(this);"><h:graphicImage name="main/images/mono/ajaxCore.svg" /><h:graphicImage styleClass="hiddenIcons" name="main/images/mono/ajaxCoreBlue.svg" /><span class="MainLinkText">Usuários</span></span>
@@ -145,7 +145,7 @@
 
                         <!-- footer start-->
                         <div class="ContentSideSections">
-                            <span class="floatLeft fontSize14 gray">Coloca um footer</span>
+<!--                             <span class="floatLeft fontSize14 gray">Coloca um footer</span> -->
                             
                             <div style="clear:both" />
                         </div>
