--- a/src/main/webapp/funcionario.xhtml
+++ b/src/main/webapp/funcionario.xhtml
@@ -100,62 +100,62 @@
 			
 			<p:tabView>
 				
-<!-- 				<p:tab title="Endereços"> -->
-<!-- 					<h:form> -->
-<!-- 			    		<div class="ui-fluid"> -->
+				<p:tab title="Endereços">
+					<h:form>
+			    		<div class="ui-fluid">
 			    
-<!-- 							<p:dataTable var="item"  -->
-<!-- 							             value="#{enderecosFuncionarioController.lazyModel}"  -->
-<!-- 							             paginator="true"  -->
-<!-- 						                 paginatorPosition="top" -->
-<!-- 						                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink}  -->
-<!--  						                 	{PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"				          -->
-<!-- 							             rows="10" -->
-<!-- 						                 selectionMode="single"  -->
-<!-- 						                 reflow="true" -->
-<!-- 						                 id="carTable"  -->
-<!-- 						                 lazy="true" -->
-<!-- 		                                 widgetVar="endGridVar"  -->
-<!-- 						                 > -->
-<!-- 						        <f:facet name="header"> -->
-<!-- 						            <p:outputPanel> -->
-<!-- 						                <h:outputText value="Buscar:" /> -->
-<!-- 						                <p:inputText id="globalFilter" onkeydown="executeFilter(event,'endGridVar'); " style="width:150px" placeholder="Buscar por.."/> -->
-<!-- 						            </p:outputPanel> -->
-<!-- 						        </f:facet>          -->
-<!-- 						  		<f:facet name="paginatorTopLeft"> -->
-<!-- 						            <p:commandButton icon="fa fa-plus" style="width: 30px" action="#{enderecosFuncionarioController.incluir()}" /> -->
-<!-- 						        </f:facet> -->
-<!-- 						        <p:column headerText="Ações"> -->
-<!-- 						        	<p:commandButton  action="#{enderecosFuncionarioController.alterar(item)}" -->
-<!-- 						        	                  icon="fa fa-edit" -->
-<!-- 						        	                  style="width: 30px"  /> -->
-<!-- 						        	<p:commandButton  action="#{enderecosFuncionarioController.remover(item)}" -->
-<!-- 						        					  icon="fa fa-trash"  -->
-<!-- 						        	                  style="width: 30px"  -->
-<!-- 						        	                  update="@form" > -->
-<!-- 						        	   <p:confirm header="Confirmação"  -->
-<!-- 						        	              message="Deseja remover o registro?"  -->
-<!-- 						        	              icon="ui-icon-alert"  -->
-<!-- 						        	              />                -->
-<!-- 						        	</p:commandButton>                   -->
-<!-- 						        </p:column> -->
-<!-- 						        <p:column headerText="Id"> -->
-<!-- 						            <h:outputText value="#{item.id}" /> -->
-<!-- 						        </p:column> -->
-<!-- 						        <p:column headerText="Endereço"> -->
-<!-- 						            <h:outputText value="#{item.endereco}" /> -->
-<!-- 						        </p:column> -->
-<!-- 						        <p:column headerText="Bairro"> -->
-<!-- 						            <h:outputText value="#{item.bairro}" /> -->
-<!-- 						        </p:column> -->
-<!-- 						        <p:column headerText="Cidade"> -->
-<!-- 						            <h:outputText value="#{item.cidade}" /> -->
-<!-- 						        </p:column> -->
-<!-- 						    </p:dataTable> -->
-<!-- 						</div> -->
-<!-- 					</h:form> -->
-<!-- 				</p:tab> -->
+							<p:dataTable var="item" 
+							             value="#{enderecosFuncionarioController.lazyModel}" 
+							             paginator="true" 
+						                 paginatorPosition="top"
+						                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} 
+ 						                 	{PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"				          
+							             rows="10"
+						                 selectionMode="single" 
+						                 reflow="true"
+						                 id="carTable" 
+						                 lazy="true"
+		                                 widgetVar="endGridVar" 
+						                 >
+						        <f:facet name="header">
+						            <p:outputPanel>
+						                <h:outputText value="Buscar:" />
+						                <p:inputText id="globalFilter" onkeydown="executeFilter(event,'endGridVar'); " style="width:150px" placeholder="Buscar por.."/>
+						            </p:outputPanel>
+						        </f:facet>         
+						  		<f:facet name="paginatorTopLeft">
+						            <p:commandButton icon="fa fa-plus" style="width: 30px" action="#{enderecosFuncionarioController.incluir()}" />
+						        </f:facet>
+						        <p:column headerText="Ações">
+						        	<p:commandButton  action="#{enderecosFuncionarioController.alterar(item)}"
+						        	                  icon="fa fa-edit"
+						        	                  style="width: 30px"  />
+						        	<p:commandButton  action="#{enderecosFuncionarioController.remover(item)}"
+						        					  icon="fa fa-trash" 
+						        	                  style="width: 30px" 
+						        	                  update="@form" >
+						        	   <p:confirm header="Confirmação" 
+						        	              message="Deseja remover o registro?" 
+						        	              icon="ui-icon-alert" 
+						        	              />               
+						        	</p:commandButton>                  
+						        </p:column>
+						        <p:column headerText="Id">
+						            <h:outputText value="#{item.id}" />
+						        </p:column>
+						        <p:column headerText="Endereço">
+						            <h:outputText value="#{item.endereco}" />
+						        </p:column>
+						        <p:column headerText="Bairro">
+						            <h:outputText value="#{item.bairro}" />
+						        </p:column>
+						        <p:column headerText="Cidade">
+						            <h:outputText value="#{item.cidade}" />
+						        </p:column>
+						    </p:dataTable>
+						</div>
+					</h:form>
+				</p:tab>
 			</p:tabView>
 	    </ui:define>
   </ui:composition>
